[package]
name = "xkcd_paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
reqwest = { version = "0.11.5", features = ["json"] }
tokio = { version = "1.12.0", features = ["macros", "process",  "fs"] }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
serde_json = "1.0.68"
rand = "0.8.4"
image = "0.23.14"
args = "2.2.0"
getopts = "0.2.21"
hex = "0.4.3"